@@ -1,4 +1,14 @@
 # Cascadia
-Le projet de Java en L3  
-Bonjour Saber
-Bonjour Mehdi
+
+Cascadia - game project for L3 in UGE for Java.
+
+```
+# you need to have a Java 23 
+$ git clone <url>
+$ ant
+$java --enable-preview -jar Cascadia.jav
+```
+
+## authors
+- MUNAITPASOV M.
+- MAOUCHE M.
